--- a/AugmentedReality/res/layout/activity_main.xml
+++ b/AugmentedReality/res/layout/activity_main.xml
@@ -7,5 +7,10 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/surface_view" />
+    
+    <SurfaceView
+    	android:id="@+id/surfaceview"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content" />
 
 </RelativeLayout>
