--- a/AugmentedReality/res/layout/activity_main.xml
+++ b/AugmentedReality/res/layout/activity_main.xml
@@ -12,5 +12,11 @@
     	android:id="@+id/surfaceview"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content" />
-
+    <!--  
+    <android.opengl.GLSurfaceView
+        android:id="@+id/glview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:windowIsTranslucent="true" />
+-->
 </RelativeLayout>
